--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <title>Holiday Homes</title>
 <h1>Welcome to Holiday Homes</h1>
-<div><a href="http://127.0.0.1:8000/admin/">Django administration</a></div>
+<div><a href="{% url 'admin:index' %}">Django administration</a></div>
 <div><a href="{% url 'profiles:index' %}">Profiles</a></div>
 <div><a href="{% url 'lettings:index' %}">Lettings</a></div>
